# libcpp17

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/cpp17/: any.hpp  optional.hpp  span.hpp  string_view.hpp  variant.hpp
include/cpp17/detail/: dynamic_extent.hpp  only.hpp  utility.hpp  variant_alternative.hpp  variant_size.hpp
src/: instances.cpp
test/: test.cpp  test.hpp
